<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Extraterrestrial Quiz</string>
    <string name="instruct_head">Instructions : </string>
    <string name="instruct1">i) This is a quiz to test your knowledge about the cosmos.</string>
    <string name="instruct2">ii) 1 mark will be awarded for each correct answer.</string>
    <string name="instruct3">iii) Multiple choice questions will be considered correct if only all the correct options are checked.</string>
    <string name="Question1">1. Which of these is the hottest planet in our solar system ?</string>
    <string name="Que1_Option1">Mars</string>
    <string name="Que1_Option2">Mercury</string>
    <string name="Que1_Option3">Venus</string>
    <string name="Que1_Option4">Earth</string>
    <string name="Question2">2. Which of these are rocky planets in our solar system ?</string>
    <string name="Que2_Option1">Earth</string>
    <string name="Que2_Option2">Jupiter</string>
    <string name="Que2_Option3">Venus</string>
    <string name="Que2_Option4">Uranus</string>
    <string name="Question3">3. The range of orbits around a star where the temperature is just right - not too hot and not too cold - for liquid water to exist on an planet given sufficient atmospheric pressure is called ?</string>
    <string name="Question4">4. Our sun is ________ years old.</string>
    <string name="Que4_Option1">4.3 Billion </string>
    <string name="Que4_Option2">3.6 Billion</string>
    <string name="Que4_Option3">4.6 Billion</string>
    <string name="Que4_Option4">3.3 Billion</string>
    <string name="Question5">5. What are the possible aftermath of a star\'s death.</string>
    <string name="Que5_Option1">Neutron Star</string>
    <string name="Que5_Option2">Quasar</string>
    <string name="Que5_Option3">Black Dwarf</string>
    <string name="Que5_Option4">Black Hole</string>
    <string name="Question6">6. What is a highly magnetized rotating neutron star or white dwarf that emits a beam of electromagnetic radiation called ?</string>
    <string name="Question7">7. Where is our Solar System located in the milky way ?</string>
    <string name="Que7_Option1">A</string>
    <string name="Que7_Option2">B</string>
    <string name="Que7_Option3">C</string>
    <string name="Que7_Option4">D</string>
    <string name="Question8">8. Which of the following are the possible types of galaxies as classified by NASA ?</string>
    <string name="Que8_Option1">Elliptical</string>
    <string name="Que8_Option2">Spiral</string>
    <string name="Que8_Option3">Oval</string>
    <string name="Que8_Option4">Irregular</string>
    <string name="Question9">9. What is an interstellar cloud of dust, hydrogen, helium and other ionised gas called ?</string>
    <string name="Question10">10. Who experimentally proved that the universe is constantly expanding ?</string>
    <string name="Que10_Option1">Stephen Hawking</string>
    <string name="Que10_Option2">Edwin Hubble</string>
    <string name="Que10_Option3">Albert Einstein</string>
    <string name="Que10_Option4">James Webb</string>
    <string name="Hint">Write your answer here...</string>
    <string name="Button">Submit</string>
    <string name="Reset">Reset</string>
    <string name="Result">You Scored %d/10 .</string>
    <string name="attemptedMsg">You attempted %d questions. Try to attempt all.</string>

</resources>
